--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT=3000
-MONGO_URI=mongodb+srv://<user>:<pass>@<cluster>/<db>?retryWrites=true&w=majority
+PORT=3001
+MONGO_URI=mongodb+srv://generalpurp1_db_user:HsjyD7prC244zr25@cluster0.7ooyz4m.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 CORS_ORIGIN=http://localhost:5173
