--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=3001
 MONGO_URI=mongodb+srv://generalpurp1_db_user:HsjyD7prC244zr25@cluster0.7ooyz4m.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 CORS_ORIGIN=http://localhost:5173
+JWT_SECRET=037340f2b5b0502702dda7b4370661f6
+RESEND_API_KEY=re_ebvGW9KG_NTEJBuHLd6wchQTzmUBVVBQ3
+RESEND_FROM="Test City <noreply@auth.testcity.xyz>"
