--- a/package.json
+++ b/package.json
@@ -1,21 +1,1 @@
-{
-"name": "numbers-server",
-"version": "1.0.0",
-"type": "module",
-"main": "server.js",
-"scripts": {
-"start": "node server.js",
-"dev": "nodemon server.js"
-},
-"dependencies": {
-"cors": "^2.8.5",
-"dotenv": "^16.4.5",
-"express": "^4.19.2",
-"helmet": "^7.1.0",
-"mongoose": "^8.6.3",
-"morgan": "^1.10.0"
-},
-"devDependencies": {
-"nodemon": "^3.1.4"
-}
-}
+{"name":"numbers-server","version":"1.0.0","type":"module","main":"server.js","scripts":{"start":"node server.js","dev":"nodemon server.js"},"dependencies":{"cors":"^2.8.5","dotenv":"^16.4.5","express":"^4.19.2","helmet":"^7.1.0","jsonwebtoken":"^9.0.2","mongoose":"^8.6.3","morgan":"^1.10.0","resend":"^6.2.2"},"devDependencies":{"nodemon":"^3.1.4"}}
